--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,48 @@
 # Python
 __pycache__/
 *.py[cod]
-*.pyo
-*.pyd
-.Python
+*$py.class
 *.so
-
-# Virtual environment
-venv/
+.Python
 env/
-.venv/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
+# Flask
+instance/
+.webassets-cache
 
 # Database
 *.db
+*.sqlite
+*.sqlite3
 
 # Environment variables
 .env
 .env.local
 
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
 # OS
 .DS_Store
 Thumbs.db
-
